--- a/index.html
+++ b/index.html
@@ -3,20 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consulta de CEP</title>
+    <title>Faça seu cadastro!</title>
     <link rel="stylesheet" href="./styles.css">
+    <script src="./scripts.js" defer></script>
 </head>
 <body>
     <div class="container">
-        <h1>Consulta de CEP</h1>
-        <div class="input-group">
-            <label for="cep">Digite o CEP:</label>
-            <input type="text" id="cep" name="cep" placeholder="Ex: 01001-000" required>
+        <div class="left-section">
+            <img src="./imgCadastro.jpg" alt="GOLF GTI">
         </div>
-        <div id="resultado">
-            <!-- Resultado da consulta de CEP será exibido aqui -->
+        <div class="right-section">
+            <h2>FAÇA SEU CADASTRO!</h2>
+            <form id="cadastroForm" action="cadastrar.php" method="POST">
+                <div class="input-group">
+                    <label for="primeiroNome">PRIMEIRO NOME</label>
+                    <input type="text" name="primeiroNome" id="primeiroNome" placeholder="Digite seu primeiro nome" required>
+                </div>
+                <div class="input-group">
+                    <label for="sobrenome">SOBRENOME</label>
+                    <input type="text" name="sobrenome" id="sobrenome" placeholder="Digite seu sobrenome" required>
+                </div>
+                <div class="input-group">
+                    <label for="email">E-MAIL</label>
+                    <input type="email" name="email" id="email" placeholder="Digite seu e-mail" required>
+                </div>
+                <div class="input-group">
+                    <label for="celular">CELULAR</label>
+                    <input type="tel" name="celular" id="celular" placeholder="(xx) xxxxx-xxxx" pattern="\(\d{2}\) \d{5}-\d{4}" required>
+                </div>
+                <div class="input-group">
+                    <label for="senha">SENHA</label>
+                    <input type="password" name="senha" id="senha" placeholder="Digite sua senha" required>
+                </div>
+                <div class="input-group">
+                    <label for="confirmarSenha">CONFIRME SUA SENHA</label>
+                    <input type="password" name="confirmarSenha" id="confirmarSenha" placeholder="Digite sua senha novamente" required>
+                </div>
+                <div class="input-group">
+                    <label for="cep">CEP</label>
+                    <input type="text" name="cep" id="cep" placeholder="Digite seu CEP" required>
+                </div>
+                <div class="input-group">
+                    <label for="rua">RUA</label>
+                    <input type="text" name="rua" id="rua" placeholder="Nome da Rua" required>
+                </div>
+                <div class="input-group">
+                    <label for="bairro">BAIRRO</label>
+                    <input type="text" name="bairro" id="bairro" placeholder="Nome do Bairro" required>
+                </div>
+                <div class="input-group">
+                    <label for="cidade">CIDADE</label>
+                    <input type="text" name="cidade" id="cidade" placeholder="Nome da Cidade" required>
+                </div>
+                <button type="submit">CADASTRAR!</button>
+            </form>
+            <div id="resultado"></div>
         </div>
     </div>
-    <script src="./scripts.js"></script>
 </body>
 </html>
